# cyrats-hs

./: README.md  cyrats-hs.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Cyrats.hs
src/Cyrats/: Domain.hs  Utils.hs
src/Cyrats/Domain/: Garage.hs  Rat.hs
src/Cyrats/Utils/: Collection.hs  Except.hs
test/: DomainSpec.hs  Instances.hs  Main.hs  Shortcuts.hs  Spec.hs  TestUtils.hs  UtilsSpec.hs
test/DomainSpec/: GarageSpec.hs  RatSpec.hs
test/UtilsSpec/: CollectionSpec.hs
