name:                cyrats-hs
version:             0.1.0.0
synopsis:            Multiplayer strategy game
description:         Multiplayer strategy game about post apocalypse, loneliness, survival and the cybernetic rats.
homepage:            https://github.com/astynax/cyrats-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov
maintainer:          astynax84@gmail.com
copyright:           Aleksey Pirogov aka astynax
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Cyrats
                     , Cyrats.Domain
                     , Cyrats.Domain.Rat
executable cyrats-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cyrats-hs

test-suite cyrats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , cyrats-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
